[package]
name = "s3-cache"
license = "MIT"
version = "0.1.2"
edition = "2024"

[[bin]]
name = "s3_cache"
path = "src/bin/s3_cache.rs"

[[bin]]
name = "s3_cache_sim"
path = "src/bin/s3_cache_sim/main.rs"
required-features = ["sim"]

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 32

[dependencies]
async-trait = "0.1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-credential-types = { version = "1", features = ["hardcoded-credentials"] }
aws-sdk-s3 = "1"
bytes = "1"
hyper = { version = "1", features = ["http1", "http2", "server"] }
hyper-util = { version = "0.1", features = [
    "server-auto",
    "server-graceful",
    "http1",
    "http2",
    "tokio",
] }
hyperloglockless = "0.5.0"
opentelemetry = { version = "0.31", default-features = false, features = [
    "logs",
    "metrics",
] }
opentelemetry-appender-tracing = "0.31"
opentelemetry-otlp = { version = "0.31", features = [
    "grpc-tonic",
    "gzip-tonic",
    "logs",
    "metrics",
] }
opentelemetry_sdk = { version = "0.31", default-features = false, features = [
    "logs",
    "metrics",
] }
opentelemetry-stdout = { version = "0.31", default-features = false, features = [
    "logs",
    "metrics",
] }
prometheus = "0.13"
s3s = "0.13.0-alpha.3"
s3s-aws = "0.13.0-alpha.3"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "net",
    "signal",
    "macros",
    "time",
] }
tracing = "0.1"
mock_instant = { version = "0.6", optional = true }
clap = { version = "4", features = ["derive"], optional = true }
rand = { version = "0.9", optional = true }
rand_distr = { version = "0.5", optional = true }
http = { version = "1", optional = true }
tracing-subscriber = { version = "0.3", features = [
    "registry",
    "std",
    "fmt",
    "env-filter",
] }

[dev-dependencies]
http = "1"
mock_instant = "0.6"

[features]
mock-clock = ["dep:mock_instant"]
sim = ["dep:clap", "dep:rand", "dep:rand_distr", "dep:http"]
